Synergy head and grid, popup form doesn't work properly

--- a/_buttons.scss
+++ b/_buttons.scss
@@ -1,4 +1,5 @@
-.reg-form__button{
+.reg-form__button, .main__item-button{
+	display: inline-block;
 	width: 321px;
 	height: 64px;
 	background: #542749;
